--- a/interacting-with-outside-world/Dockerfile
+++ b/interacting-with-outside-world/Dockerfile
@@ -1,3 +1,5 @@
+FROM python:3.7.9-alpine
 
+COPY requirements.txt /requirements.txt
 
-RUN pip install requests==2.24.0
+RUN pip install -r requirements.txt
